--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "formik": "^2.4.5",
+    "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
