--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
