added theme switching

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "formik": "^2.4.5",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
